--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 cycler==0.10.0
-kiwisolver==1.0.1
+gebaSpike==1.0.3
+joblib==0.13.2
+kiwisolver==1.1.0
 matplotlib==3.0.3
-numpy==1.16.2
+numpy==1.16.3
 PyOpenGL==3.1.0
-pyparsing==2.3.1
-PyQt5==5.12.1
-PyQt5-sip==4.19.15
+pyparsing==2.4.0
+PyQt5==5.12.2
+PyQt5-sip==4.19.17
 pyqtgraph==0.10.0
 python-dateutil==2.8.0
+scikit-learn==0.21.0
 scipy==1.2.1
 six==1.12.0
+sklearn==0.0
